RESOLVED FIXED286121
REGRESSION(289034@main): ASSERTION FAILED: result in WebKit::FrameLoadState::removeObserver(FrameLoadStateObserver &) for http/tests/navigation/page-cache-requestAnimationFrame.html
https://bugs.webkit.org/show_bug.cgi?id=286121
Summary REGRESSION(289034@main): ASSERTION FAILED: result in WebKit::FrameLoadState::...
Fujii Hironori
Reported 2025-01-16 22:14:14 PST
REGRESSION: ASSERTION FAILED: result in WebKit::FrameLoadState::removeObserver(FrameLoadStateObserver &) https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fnavigation%2Fpage-cache-requestAnimationFrame.html&style=debug 289030@main : last good 289034@main : first bad https://build.webkit.org/results/Apple-Sequoia-Debug-AppleSilicon-WK2-Tests/289034@main%20(621)/http/tests/navigation/page-cache-requestAnimationFrame-stderr.txt ASSERTION FAILED: result /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Source/WebKit/UIProcess/FrameLoadState.cpp(44) : void WebKit::FrameLoadState::removeObserver(FrameLoadStateObserver &) 1 0x145722820 WebKit::FrameLoadState::removeObserver(WebKit::FrameLoadStateObserver&) 2 0x145818f84 WebKit::WebPageProxy::suspendCurrentPageIfPossible(API::Navigation&, WTF::RefPtr<WebKit::WebFrameProxy, WTF::RawPtrTraits<WebKit::WebFrameProxy>, WTF::DefaultRefDerefTraits<WebKit::WebFrameProxy>>&&, WebKit::ShouldDelayClosingUntilFirstLayerFlush) 3 0x145834250 WebKit::WebPageProxy::commitProvisionalPage(IPC::Connection&, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String const&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&) 4 0x145743bf4 WebKit::ProvisionalPageProxy::didCommitLoadForFrame(IPC::Connection&, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String const&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&) 5 0x14575f870 auto void IPC::callMemberFunction<WebKit::ProvisionalPageProxy, WebKit::ProvisionalPageProxy, void (IPC::Connection&, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String const&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), std::__1::tuple<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>>(WebKit::ProvisionalPageProxy*, void (WebKit::ProvisionalPageProxy::*)(IPC::Connection&, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String const&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), IPC::Connection&, std::__1::tuple<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>&&)::'lambda'(auto&&...)::operator()<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>(auto&&...) const 6 0x14575f6c0 decltype(std::declval<WebKit::ProvisionalPageProxy>()(std::declval<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>>(), std::declval<WebKit::FrameInfoData>(), std::declval<WebCore::ResourceRequest>(), std::declval<std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>>(), std::declval<WTF::String>(), std::declval<bool>(), std::declval<WebCore::FrameLoadType>(), std::declval<WebCore::CertificateInfo>(), std::declval<bool>(), std::declval<bool>(), std::declval<bool>(), std::declval<WebCore::HasInsecureContent>(), std::declval<WebCore::MouseEventPolicy>(), std::declval<WebKit::UserData>())) std::__1::__invoke[abi:sn180100]<void IPC::callMemberFunction<WebKit::ProvisionalPageProxy, WebKit::ProvisionalPageProxy, void (IPC::Connection&, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String const&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), std::__1::tuple<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>>(WebKit::ProvisionalPageProxy*, void (WebKit::ProvisionalPageProxy::*)(IPC::Connection&, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String const&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), IPC::Connection&, std::__1::tuple<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>&&)::'lambda'(auto&&...), WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>(WebKit::ProvisionalPageProxy&&, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>&&, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>&&, WTF::String&&, bool&&, WebCore::FrameLoadType&&, WebCore::CertificateInfo&&, bool&&, bool&&, bool&&, WebCore::HasInsecureContent&&, WebCore::MouseEventPolicy&&, WebKit::UserData&&) 7 0x14575f5f0 decltype(auto) std::__1::__apply_tuple_impl[abi:sn180100]<void IPC::callMemberFunction<WebKit::ProvisionalPageProxy, WebKit::ProvisionalPageProxy, void (IPC::Connection&, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String const&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), std::__1::tuple<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>>(WebKit::ProvisionalPageProxy*, void (WebKit::ProvisionalPageProxy::*)(IPC::Connection&, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String const&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), IPC::Connection&, std::__1::tuple<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>&&)::'lambda'(auto&&...), std::__1::tuple<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul, 6ul, 7ul, 8ul, 9ul, 10ul, 11ul, 12ul, 13ul>(WebKit::ProvisionalPageProxy&&, WebKit::ProvisionalPageProxy&&, std::__1::__tuple_indices<0ul, 1ul, 2ul, 3ul, 4ul, 5ul, 6ul, 7ul, 8ul, 9ul, 10ul, 11ul, 12ul, 13ul>) 8 0x14575f4c4 decltype(auto) std::__1::apply[abi:sn180100]<void IPC::callMemberFunction<WebKit::ProvisionalPageProxy, WebKit::ProvisionalPageProxy, void (IPC::Connection&, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String const&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), std::__1::tuple<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>>(WebKit::ProvisionalPageProxy*, void (WebKit::ProvisionalPageProxy::*)(IPC::Connection&, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String const&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), IPC::Connection&, std::__1::tuple<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>&&)::'lambda'(auto&&...), std::__1::tuple<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>>(WebKit::ProvisionalPageProxy&&, WebKit::ProvisionalPageProxy&&) 9 0x14575f498 void IPC::callMemberFunction<WebKit::ProvisionalPageProxy, WebKit::ProvisionalPageProxy, void (IPC::Connection&, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String const&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), std::__1::tuple<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>>(WebKit::ProvisionalPageProxy*, void (WebKit::ProvisionalPageProxy::*)(IPC::Connection&, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String const&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), IPC::Connection&, std::__1::tuple<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>&&) 10 0x145746fd0 void IPC::handleMessage<Messages::WebPageProxy::DidCommitLoadForFrame, IPC::Connection, WebKit::ProvisionalPageProxy, WebKit::ProvisionalPageProxy, void (IPC::Connection&, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String const&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&)>(IPC::Connection&, IPC::Decoder&, WebKit::ProvisionalPageProxy*, void (WebKit::ProvisionalPageProxy::*)(IPC::Connection&, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String const&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&)) 11 0x145745d64 WebKit::ProvisionalPageProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 12 0x146e00a10 IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 13 0x1456ddc34 WebKit::AuxiliaryProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) 14 0x145a03f44 WebKit::WebProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) 15 0x144648b70 WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 16 0x146dc8f6c IPC::Connection::dispatchMessage(IPC::Decoder&) 17 0x146dc93c8 IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) 18 0x146dc9ae0 IPC::Connection::dispatchIncomingMessages() 19 0x146def868 IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_1::operator()() const 20 0x146def7c4 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_1, void>::call() 21 0x11047d634 WTF::Function<void ()>::operator()() const 22 0x1105468b8 WTF::RunLoop::performWork() 23 0x11054ab34 WTF::RunLoop::performWork(void*) 24 0x1830d6414 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 25 0x1830d63a8 __CFRunLoopDoSource0 26 0x1830d610c __CFRunLoopDoSources0 27 0x1830d4cf8 __CFRunLoopRun 28 0x1830d4334 CFRunLoopRunSpecific 29 0x184292608 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 30 0x1005c2a28 WTR::TestController::platformRunUntil(bool&, WTF::Seconds) 31 0x100578218 WTR::TestController::runUntil(bool&, WTF::Seconds)
Attachments
Charlie Wolfe
Comment 1 2025-01-16 23:05:05 PST
EWS
Comment 2 2025-01-17 08:37:32 PST
Committed 289059@main (5ed85eba0c21): <https://commits.webkit.org/289059@main> Reviewed commits have been landed. Closing PR #39180 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-01-17 08:38:15 PST
Charlie Wolfe
Comment 4 2025-01-17 15:53:33 PST
*** Bug 286150 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.