REGRESSION(289034@main): ASSERTION FAILED: result in WebKit::FrameLoadState::removeObserver(FrameLoadStateObserver &) for http/tests/navigation/page-cache-requestAnimationFrame.html https://bugs.webkit.org/show_bug.cgi?id=286121

Reviewed by Pascoe.

When a page is suspended, the observer is removed from its main frame. So, we need to add the observer
back when unsuspending the page. Also, update the variable name to better reflect its purpose.

* Source/WebKit/UIProcess/ProvisionalPageProxy.cpp:
(WebKit::ProvisionalPageProxy::ProvisionalPageProxy):
(WebKit::ProvisionalPageProxy::initializeWebPage):
* Source/WebKit/UIProcess/ProvisionalPageProxy.h:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::swapToProvisionalPage):

Canonical link: https://commits.webkit.org/289059@main